--- a/test/knockback_memory_management/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_memory_management/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
-  <script type="text/javascript" src="../vendor/backbone-relational.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-relational-0.5.0.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
