--- a/test/backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -4,9 +4,9 @@
   <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
-  <script type="text/javascript" src="../../vendor/optional/backbone-modelref.min.js"></script>
+  <script type="text/javascript" src="../../vendor/backbone-modelref.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
