--- a/test/knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -4,7 +4,7 @@
   <title>Knockback.LocalizedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../vendor/knockout-1.2.1.debug.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore-1.3.3.js"></script>
+  <script type="text/javascript" src="../../vendor/underscore.js"></script>
   <script type="text/javascript" src="../../vendor/backbone-0.9.1.js"></script>
 
   <!-- LIBRARY -->
