--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -50,7 +50,8 @@
     <iframe src="knockback_triggered_observable/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="backbone_modelref/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe>
+    <!-- KNOCKOUT DIDN'T SUPPORT MODULES -->
+    <!-- <iframe src="packaging/test-legacy.html" scrolling="auto" frameborder="0"></iframe> -->
   </div>
 </body>
 </html>
