--- a/test/packaging/test-latest.html
+++ b/test/packaging/test-latest.html
@@ -2,38 +2,12 @@
 <html>
 <head>
   <title>Knockback Packaging Test Suite</title>
-  <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../vendor/knockout-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/underscore-latest.js"></script>
-  <script type="text/javascript" src="../../vendor/backbone-latest.js"></script>
-
   <!-- HELPERS -->
   <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
-  <!-- LIBRARY -->
-  <script type="text/javascript">
-    window.mock_requires = {};
-    window.mock_requires['underscore'] = {_: window._}; delete window['_'];
-    window.mock_requires['backbone'] = window.Backbone; delete window['Backbone'];
-    window.mock_requires['knockout'] = window.ko; delete window['ko'];
-    window.require = function(path) { return window.mock_requires[path]; };
-    window.exports = {};
-  </script>
-  <script type="text/javascript" src="../../knockback.js"></script>
-  <script type="text/javascript">
-    window.mock_requires['knockback'] = window['exports']; delete window['exports']; delete window['kb']; delete window['Knockback']
-  </script>
-
-  <!-- HELPERS -->
-  <script type="text/javascript">
-    window.exports = {};
-  </script>
-  <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
-  <script type="text/javascript">
-    window.mock_requires['knockback-examples'] = window['exports']; delete window['exports']
-  </script>
+  <script type="text/javascript" src="build/bundle-latest.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
