--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -33,6 +33,7 @@
     <iframe src="knockback_memory_management/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_legacy/test-latest.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="packaging/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="lodash/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (Legacy)</h1>
