--- a/test/backbone_relational/test-latest.html
+++ b/test/backbone_relational/test-latest.html
@@ -10,6 +10,7 @@
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
+  <script type="text/javascript" src="../../lib/knockback_statistics.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../test/_examples/build/_examples.js"></script>
