--- a/test/packaging/test-latest.html
+++ b/test/packaging/test-latest.html
@@ -8,7 +8,9 @@
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
   <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
+  <!-- LIBRARY -->
   <script type="text/javascript" src="build/bundle-latest.js"></script>
+  <script type="text/javascript" src="../../lib/knockback_statistics.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
