--- a/test/knockback-validation/test-latest-amd.html
+++ b/test/knockback-validation/test-latest-amd.html
@@ -12,7 +12,7 @@
         'backbone': "../../vendor/backbone-0.9.2",
         'knockout': "../../vendor/knockout-2.1.0",
         'knockback': "../../knockback",
-        'knockback-examples-localization': "../_examples/build/_localization_examples",
+        'knockback-validation': "../../lib/knockback-validation",
         'knockback-statistics': "../../lib/knockback-statistics"
       }
     });
