--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 <ul>
 <li><a href="http://search.npmjs.org/#/knockback">npm registry</a></li>
 <li><a href="http://nuget.org/packages/Knockback.js">NuGet Gallery</a></li>
+<li><a href="http://sindresorhus.com/bower-components/">Bower</a></li>
 </ul>
 <h2>Source</h2>
 <p>You can find the source on <a href="https://github.com/kmalakoff/knockback">Github</a>. To provide feedback leave a message or <a href="https://github.com/kmalakoff/knockback/issues">create an issue</a>.</p>
